# janus-canary-gate

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  agent.md  deny.toml  og_canary_gate_ord.md  prd.md  workplan.md
.github/workflows/: ci.yml
config/: example.yaml
docs/adr/: 001-single-crate-lib-bin.md  002-yaml-control-plane.md  003-streaming-evaluation.md  004-ratatui-tui-dashboard.md  005-sqlite-decision-history.md  006-prometheus-metrics-source.md
docs/plans/: README.md
docs/plans/templates/: adr-template.md  plan-template.md
docs/references/: code-quality.toml  rust-cli.toml  testing.toml  tui-patterns.toml
examples/http-service/: canary-gate.yaml
examples/simple-grpc/: canary-gate.yaml
migrations/: 001_initial.sql
packs/: grpc-server.yaml  http-server.yaml  rollout-k8s.yaml  runtime-basic.yaml
src/: api.rs  behavior.rs  classification.rs  cli.rs  config.rs  db.rs  error.rs  events.rs  ingestion.rs  lib.rs  main.rs  recommendation.rs  verdict.rs
src/metrics/: mock.rs  mod.rs  prometheus.rs
src/operator/: controller.rs  crd.rs  log_source.rs  main.rs  mod.rs  reconciler.rs
src/stats/: mann_whitney.rs  mod.rs  scoring.rs
src/tui/: input.rs  mod.rs  state.rs
src/tui/widgets/: config_status.rs  evidence.rs  mod.rs  recommendation.rs  timeline.rs
tests/: api_test.rs  behavior_test.rs  classification_test.rs  cli_test.rs  config_test.rs  db_test.rs  dir_ingestion_test.rs  e2e_test.rs  ingestion_test.rs  metrics_test.rs  operator_test.rs  recommendation_test.rs  stats_test.rs  tui_test.rs
tests/fixtures/configs/: invalid_schema.yaml  (+5 more)
(+10 files in other folders)
